--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
       "name": "android (free)",
       "request": "launch",
       "type": "dart",
-      "program": "lib/main.dart",
+      "program": "lib/main_free.dart",
       "args": [
         "--dart-define-from-file",
         ".env.dev.local",
@@ -20,7 +20,7 @@
       "name": "android (pro)",
       "request": "launch",
       "type": "dart",
-      "program": "lib/main.dart",
+      "program": "lib/main_pro.dart",
       "args": [
         "--dart-define-from-file",
         ".env.dev.local",
@@ -29,20 +29,32 @@
       ]
     },
     {
-      "name": "ios",
+      "name": "ios (free)",
       "request": "launch",
       "type": "dart",
-      "program": "lib/main.dart",
+      "program": "lib/main_free.dart",
       "args": [
         "--dart-define-from-file",
         ".env.dev.local",
       ]
     },
     {
+      "name": "ios (pro)",
+      "request": "launch",
+      "type": "dart",
+      "program": "lib/main_pro.dart",
+      "args": [
+        "--dart-define-from-file",
+        ".env.dev.local",
+        "--flavor",
+        "pro"
+      ]
+    },
+    {
       "name": "desktop & web",
       "request": "launch",
       "type": "dart",
-      "program": "lib/main.dart",
+      "program": "lib/main_free.dart",
       "args": [
         "--dart-define-from-file",
         ".env.dev.local"
