--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -64,7 +64,7 @@ jobs:
         working-directory: android
 
       - name: Build Apk
-        run: flutter build apk --no-tree-shake-icons --dart-define-from-file=.env --flavor freeStaging
+        run: flutter build apk --no-tree-shake-icons --dart-define-from-file=.env --target lib/main_free.dart --flavor freeStaging
 
       # Package the build.
       - name: Copy build for Android
@@ -79,7 +79,7 @@ jobs:
           rm -f .env
 
   ios:
-    name: Create ios
+    name: Create ios (free)
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v4
@@ -107,31 +107,37 @@ jobs:
 
       - name: Install the Apple certificate and provisioning profile
         env:
-          CERT_BASE64: ${{ secrets.CERT_BASE64 }}
           CERT_DEV_BASE64: ${{ secrets.CERT_DEV_BASE64 }}
-          P12_BASE64: ${{ secrets.P12_BASE64 }}
+          CERT_BASE64: ${{ secrets.CERT_BASE64 }}
           P12_DEV_BASE64: ${{ secrets.P12_DEV_BASE64 }}
+          P12_BASE64: ${{ secrets.P12_BASE64 }}
           P12_PASSWORD: ${{ secrets.P12_PASSWORD }}
-          PROVISION_PROFILE_BASE64: ${{ secrets.PROVISION_PROFILE_BASE64 }}
           PROVISION_PROFILE_DEV_BASE64: ${{ secrets.PROVISION_PROFILE_DEV_BASE64 }}
+          PROVISION_PROFILE_BASE64: ${{ secrets.PROVISION_PROFILE_BASE64 }}
+          PROVISION_PROFILE_DEV_BASE64_PRO: ${{ secrets.PROVISION_PROFILE_DEV_BASE64_PRO }}
+          PROVISION_PROFILE_BASE64_PRO: ${{ secrets.PROVISION_PROFILE_BASE64_PRO }}
           KEYCHAIN_PASSWORD: ${{ secrets.KEYCHAIN_PASSWORD }}
         run: |
           # create variables
-          CERTIFICATE_PATH=$RUNNER_TEMP/build_certificate.p12
           CERTIFICATE_DEV_PATH=$RUNNER_TEMP/build_certificate_dev.p12
-          CERT_PATH=$RUNNER_TEMP/ios_distribution.cer
+          CERTIFICATE_PATH=$RUNNER_TEMP/build_certificate.p12
           CERT_DEV_PATH=$RUNNER_TEMP/ios_development.cer
-          PP_PATH=$RUNNER_TEMP/watermark_assistant_appstore.mobileprovision
+          CERT_PATH=$RUNNER_TEMP/ios_distribution.cer
           PP_DEV_PATH=$RUNNER_TEMP/watermark_assistant_dev.mobileprovision
+          PP_PATH=$RUNNER_TEMP/watermark_assistant_appstore.mobileprovision
+          PP_PRO_DEV_PATH=$RUNNER_TEMP/watermark_assistant_pro_dev.mobileprovision
+          PP_PRO_PATH=$RUNNER_TEMP/watermark_assistant_pro_appstore.mobileprovision
           KEYCHAIN_PATH=$RUNNER_TEMP/pg-signing.keychain-db
 
           # import certificate and provisioning profile from secrets
-          echo -n "$P12_BASE64" | base64 --decode --output $CERTIFICATE_PATH
           echo -n "$P12_DEV_BASE64" | base64 --decode --output $CERTIFICATE_DEV_PATH
-          echo -n "$CERT_BASE64" | base64 --decode --output $CERT_PATH
+          echo -n "$P12_BASE64" | base64 --decode --output $CERTIFICATE_PATH
           echo -n "$CERT_DEV_BASE64" | base64 --decode --output $CERT_DEV_PATH
-          echo -n "$PROVISION_PROFILE_BASE64" | base64 --decode --output $PP_PATH
+          echo -n "$CERT_BASE64" | base64 --decode --output $CERT_PATH
           echo -n "$PROVISION_PROFILE_DEV_BASE64" | base64 --decode --output $PP_DEV_PATH
+          echo -n "$PROVISION_PROFILE_BASE64" | base64 --decode --output $PP_PATH
+          echo -n "$PROVISION_PROFILE_DEV_BASE64_PRO" | base64 --decode --output $PP_PRO_DEV_PATH
+          echo -n "$PROVISION_PROFILE_BASE64_PRO" | base64 --decode --output $PP_PRO_PATH
 
           # create temporary keychain
           security create-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
@@ -139,23 +145,25 @@ jobs:
           security unlock-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
 
           # import certificate to keychain
-          security import $CERTIFICATE_PATH -P "$P12_PASSWORD" -A -t cert -f pkcs12 -k $KEYCHAIN_PATH
           security import $CERTIFICATE_DEV_PATH -P "$P12_PASSWORD" -A -t cert -f pkcs12 -k $KEYCHAIN_PATH
-          security import $CERT_PATH -P "$P12_PASSWORD" -A -t cert -k $KEYCHAIN_PATH
+          security import $CERTIFICATE_PATH -P "$P12_PASSWORD" -A -t cert -f pkcs12 -k $KEYCHAIN_PATH
           security import $CERT_DEV_PATH -P "$P12_PASSWORD" -A -t cert -k $KEYCHAIN_PATH
+          security import $CERT_PATH -P "$P12_PASSWORD" -A -t cert -k $KEYCHAIN_PATH
           security list-keychain -d user -s $KEYCHAIN_PATH
 
           # apply provisioning profile
           mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
-          mv $PP_PATH ~/Library/MobileDevice/Provisioning\ Profiles
           mv $PP_DEV_PATH ~/Library/MobileDevice/Provisioning\ Profiles
+          mv $PP_PATH ~/Library/MobileDevice/Provisioning\ Profiles
+          mv $PP_PRO_DEV_PATH ~/Library/MobileDevice/Provisioning\ Profiles
+          mv $PP_PRO_PATH ~/Library/MobileDevice/Provisioning\ Profiles
 
       - name: Build Ipa
         run: |
           echo "╠ Removing build products and intermediate files from the build root..."
           cd ios && xcodebuild clean && cd ..
           echo "╠ Releasing to app store..."
-          flutter build ipa --dart-define-from-file=.env --export-options-plist=ios/ExportOptions-debug.plist
+          flutter build ipa --dart-define-from-file=.env --target lib/main_free.dart --export-options-plist=ios/ExportOptions-debug.plist
 
       # Package the build.
       - name: Copy build for iOS
