--- a/slang.yaml
+++ b/slang.yaml
@@ -1,4 +1,7 @@
- base_locale: en
- input_directory: lib/i18n
- maps:
-   - locales
+base_locale: en
+input_directory: lib/i18n
+maps:
+  - locales
+contexts:
+  Flavor:
+    default_parameter: flavor # by default: "context"
