--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -734,7 +734,7 @@ jobs:
           security list-keychain -d user -s $KEYCHAIN_PATH
 
           # apply provisioning profile
-          mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles\
+          mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
           mv $PP_DEV_PATH ~/Library/MobileDevice/Provisioning\ Profiles
           mv $PP_PATH ~/Library/MobileDevice/Provisioning\ Profiles
           mv $PP_PRO_DEV_PATH ~/Library/MobileDevice/Provisioning\ Profiles
