--- a/.github/workflows/test-macos-zip.yml
+++ b/.github/workflows/test-macos-zip.yml
@@ -8,7 +8,7 @@ permissions: read-all
 
 jobs:
   macos_zip:
-    name: Create macos zip
+    name: Create macos zip (free)
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v4
@@ -46,7 +46,7 @@ jobs:
           echo "╠ Removing build products and intermediate files from the build root..."
           cd macos && xcodebuild clean && cd ..
           echo "╠ Releasing to app store..."
-          flutter build macos --dart-define-from-file=.env
+          flutter build macos --dart-define-from-file=.env --target lib/main_free.dart
 
       - name: Install certificates
         env:
