--- a/macos/Podfile
+++ b/macos/Podfile
@@ -5,8 +5,11 @@ ENV['COCOAPODS_DISABLE_STATS'] = 'true'
 
 project 'PicGuardMac', {
   'Debug' => :debug,
+  'Debug-pro' => :debug,
   'Profile' => :release,
+  'Profile-pro' => :release,
   'Release' => :release,
+  'Release-pro' => :release,
 }
 
 def flutter_root
