--- a/macos/Runner/Info-Pro.plist
+++ b/macos/Runner/Info-Pro.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleDisplayName</key>
-	<string>PicGuard</string>
+	<string>PicGuard Pro</string>
 	<key>CFBundleIconFile</key>
 	<string></string>
 	<key>CFBundleIdentifier</key>
