--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -28,6 +28,12 @@ if (keystorePropertiesFile.exists()) {
     keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
 }
 
+def proKeystoreProperties = new Properties()
+def proKeystorePropertiesFile = rootProject.file('key-pro.properties')
+if (proKeystorePropertiesFile.exists()) {
+    proKeystoreProperties.load(new FileInputStream(proKeystorePropertiesFile))
+}
+
 android {
     namespace "com.kjxbyz.watermarkassistant"
     compileSdkVersion 34
@@ -56,14 +62,46 @@ android {
         versionCode flutterVersionCode.toInteger()
     }
 
+    signingConfigs {
+        if (System.getenv("ANDROID_KEYSTORE_PATH")) {
+            free {
+                storeFile file(System.getenv("ANDROID_KEYSTORE_PATH"))
+                keyAlias System.getenv("ANDROID_KEYSTORE_ALIAS")
+                keyPassword System.getenv("ANDROID_KEYSTORE_PRIVATE_KEY_PASSWORD")
+                storePassword System.getenv("ANDROID_KEYSTORE_PASSWORD")
+            }
+            pro {
+                storeFile file(System.getenv("ANDROID_KEYSTORE_PATH_PRO"))
+                keyAlias System.getenv("ANDROID_KEYSTORE_ALIAS_PRO")
+                keyPassword System.getenv("ANDROID_KEYSTORE_PRIVATE_KEY_PASSWORD_PRO")
+                storePassword System.getenv("ANDROID_KEYSTORE_PASSWORD_PRO")
+            }
+        } else {
+            free {
+                storeFile keystoreProperties['storeFile'] ? file(keystoreProperties['storeFile']) : null
+                keyAlias keystoreProperties['keyAlias']
+                keyPassword keystoreProperties['keyPassword']
+                storePassword keystoreProperties['storePassword']
+            }
+            pro {
+                storeFile proKeystoreProperties['storeFile'] ? file(proKeystoreProperties['storeFile']) : null
+                keyAlias proKeystoreProperties['keyAlias']
+                keyPassword proKeystoreProperties['keyPassword']
+                storePassword proKeystoreProperties['storePassword']
+            }
+        }
+    }
+
     flavorDimensions "default", "env"
     productFlavors {
         free {
             dimension "default"
+            signingConfig signingConfigs.free
         }
 
         pro {
             dimension "default"
+            signingConfig signingConfigs.pro
             applicationIdSuffix ".pro"
         }
 
@@ -77,27 +115,8 @@ android {
         }
     }
 
-    signingConfigs {
-        if (System.getenv("ANDROID_KEYSTORE_PATH")) {
-            release {
-                storeFile file(System.getenv("ANDROID_KEYSTORE_PATH"))
-                keyAlias System.getenv("ANDROID_KEYSTORE_ALIAS")
-                keyPassword System.getenv("ANDROID_KEYSTORE_PRIVATE_KEY_PASSWORD")
-                storePassword System.getenv("ANDROID_KEYSTORE_PASSWORD")
-            }
-        } else {
-            release {
-                keyAlias keystoreProperties['keyAlias']
-                keyPassword keystoreProperties['keyPassword']
-                storeFile keystoreProperties['storeFile'] ? file(keystoreProperties['storeFile']) : null
-                storePassword keystoreProperties['storePassword']
-            }
-        }
-    }
-
     buildTypes {
         release {
-            signingConfig signingConfigs.release
             minifyEnabled true
         }
         debug {
