--- a/.github/workflows/test-linux-rpm-arm64.yml
+++ b/.github/workflows/test-linux-rpm-arm64.yml
@@ -62,7 +62,7 @@ jobs:
 
             # Setup Flutter
             echo "Setup Flutter"
-            bash ./install-flutter-ubuntu.sh
+            bash ./scripts/install-flutter-ubuntu.sh
             
             if [ -d "/home/linux-arm64/flutter" ]; then
               echo "🟩 ls -la"
