--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -285,7 +285,7 @@ jobs:
 
       - name: Build DMG
         run: |
-          bash build-dmg.sh
+          bash scripts/build-dmg.sh
 
       # Package the build.
       - name: Copy build for snap
