Added support for state persistence

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   form_builder_validators: ^11.0.0
   gap: ^3.0.1
   get: ^4.6.6
+  get_storage: ^2.1.1
   image_gallery_saver: #8c6480bf3a07834df89525e7ac6e0196ec701f73
     path: ./plugins/image_gallery_saver
   image_picker: ^1.1.2
