--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,8 +19,8 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.4.4 <4.0.0'
-  flutter: ">=3.22.3"
+  sdk: '>=3.5.0 <4.0.0'
+  flutter: '>=3.24.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -76,7 +76,7 @@ dependencies:
   window_manager: ^0.3.9
 
 dev_dependencies:
-  build_runner: ^2.4.11
+  build_runner: ^2.4.12
   flutter_gen_runner: ^5.6.0
   flutter_test:
     sdk: flutter
