--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -73,7 +73,7 @@
       ]
     },
     {
-      "name": "Linux & Windwos & web",
+      "name": "Linux & Windows & web",
       "request": "launch",
       "type": "dart",
       "program": "lib/main_free.dart",
