--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,10 +1,17 @@
 name: picguard
 version: 1.0.0
 summary: Your pictures, your signature.
-description: Your pictures, your signature.
+description: |
+  Introducing **PicGuard** - the ultimate solution for securing and customizing your digital photos. With our app, you can easily add watermarks to your images to protect your creative work and maintain your privacy.
+
+  **PicGuard** offers robust privacy protection features, ensuring your personal and sensitive information remains safeguarded. It's highly customizable, allowing you to personalize watermarks with various fonts, styles, and designs to suit your needs.
+
+  Accessible on web, mobile, and desktop, you can seamlessly integrate and manage your watermarking tasks across all your devices. **PicGuard**, as an open-source tool, it's not only free but also continuously improved by a community of developers dedicated to providing the best user experience.
+
+  Download **PicGuard** today and take control of your photo security and personalization like never before!
 icon: snap/gui/picguard.png
 title: PicGuard
-contact: kjxbyz@163.com
+contact: kjxbyz888@outlook.com
 license: MIT
 source-code: https://github.com/picguard/picguard
 issues: https://github.com/picguard/picguard/issues
@@ -26,6 +33,7 @@ apps:
     extensions: [gnome] # gnome includes the libraries required by flutter
     plugs:
       - network
+      - home
     slots:
       - dbus-picguard
 parts:
@@ -33,6 +41,20 @@ parts:
     source: .
     plugin: flutter
     # flutter-target: lib/main.dart # The main entry-point file of the application
+    build-packages:
+      - curl
+      - git
+      - unzip
+      - xz-utils
+      - zip
+      - libglu1-mesa
+      - clang
+      - cmake
+      - ninja-build
+      - pkg-config
+      - libgtk-3-dev
+      - liblzma-dev
+      - libstdc++-12-dev
     build-environment:
       - FLUTTER_REPO: https://github.com/flutter/flutter.git
       - FLUTTER_VERSION: 3.24.0
